updated MalletItem and ShearsSnipInteractions logic